# numalogic-prometheus

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  entry.sh  pipeline.yaml  pyproject.toml  requirements.txt  starter.py  trainer.py
.github/: CODEOWNERS
.github/workflows/: build-go.yml  build.yml  changelog.yml  ci.yml  coverage.yml  image.yml  lint.yml  pypi.yml  release-go.yaml
.hack/: changelog.sh
deployment/: mlflow-deployment.yaml  numalogic-prometheus-pipeline.yaml  numalogic-training-workflow-template.yaml  prometheus-rules.yaml
docs/: metrics.md  mlflow-s3.md  prometheus.md
manifests/: kustomization.yaml  namespace.yaml  numalogic-prometheus-pipeline.yaml
manifests/argoworkflows/: kustomization.yaml  numalogic-training-workflow-template.yaml  workflow-role.yaml
manifests/mlflow/: Dockerfile  kustomization.yaml  mlflow-deployment-local.yaml  mlflow-deployment.yaml
manifests/pipeline/: install-numalogic-rollouts.yaml  kustomization.yaml  numalogic-prometheus-app-configs.yaml  numalogic-prometheus-config.yaml  numalogic-prometheus-default-configs.yaml  numalogic-prometheus-pipeline.yaml
manifests/prerequisites/: kustomization.yaml
manifests/prerequisites/argoworkflows/: kustomization.yaml  namespace.yaml
manifests/prerequisites/numaflow/: kustomization.yaml  namespace.yaml
manifests/prerequisites/prometheus/: cm.yaml  install.yaml  kustomization.yaml  namespace.yaml  prometheus-rules.yaml  prometheus-server-conf.yaml  prometheus-service.yaml
manifests/prerequisites/prometheus/kube-state-metrics/: deployment.yaml
manifests/prometheus/: kustomization.yaml  prometheus-rules.yaml  prometheus-server-conf.yaml  pushgateway.yaml
manifests/prometheus/kube-state-metrics/: kustomization.yaml
manifests/redis/: configmap.yaml  headless-svc.yaml  kustomization.yaml  redis-statefulset.yaml  redis-svc.yaml  scripts-configmap.yaml  secret.yaml
nlogicprom/: constants.py  entities.py  factory.py  pipeline.py  redis.py  tools.py
nlogicprom/tests/: __init__.py  test_factory.py  test_pipeline.py  test_prometheus.py  test_tools.py  test_trainer.py  tools.py
nlogicprom/tests/resources/data/: 2xx_w_nan.csv  latency.txt  rollout_latency.csv  rollouts_stream.json  stream.json
nlogicprom/tests/udf/: test_filter.py  test_inference.py  test_postprocess.py  test_preprocess.py  test_window.py
nlogicprom/udf/: __init__.py  filter.py  inference.py  postprocess.py  preprocess.py  window.py
nlogicprom/udf/models/: sandbox-meshdr-usw2-demo_cpu.pth
numaprom/: __init__.py  __main__.py  _config.py  _constants.py  constants.py  entities.py  factory.py  pipeline.py  prometheus.py  redis.py  tools.py  trainer.py  watcher.py
numaprom/clients/: prometheus.py  redis.py  sentinel.py
numaprom/config/: __init__.py  _config.py  config.yaml
numaprom/config/default/: config.yaml  numalogic.yaml
numaprom/configs/: default_config.yaml
numaprom/default-configs/: config.yaml  numalogic_config.yaml  pipeline_config.yaml
numaprom/metrics/: __init__.py  _metrics.py  metrics.py
numaprom/monitoring/: __init__.py  _config.py  config.py  metrics.py  utility.py
numaprom/tests/: __init__.py  test_pipeline.py  test_prometheus.py  test_tools.py  test_trainer.py  tools.py
numaprom/tests/resources/data/: 2xx.csv  2xx.txt  (+2 more)
numaprom/tests/udf/: test_filter.py  test_inference.py  test_postprocess.py  test_preprocess.py  test_window.py
numaprom/udf/: __init__.py  aggregate.py  filter.py  inference.py  keying.py  metrics.py  postprocess.py  preprocess.py  threshold.py  window.py
numaprom/udsink/: __init__.py  train.py  train_iks_doctors.py  train_rollout.py
prometheus-query-service/: .gitignore  Dockerfile  Makefile  README.md  config.yaml  entrypoint.sh  go.mod  go.sum  main.go  original.json
prometheus-query-service/config/: config.go  config_test.go
prometheus-query-service/manifests/: configmap.yaml  deployment.yaml  install.yaml  kustomization.yaml  rbac.yaml
prometheus-query-service/pkg/job/: job.go
prometheus-query-service/pkg/log/: log.go
prometheus-serde/: Dockerfile  Makefile  go.mod  go.sum  main.go  main_test.go
requirements/: requirements-torch.txt
schema/: AppConf.json  DataConf.json  MetricConf.json  PipelineConf.json  PrometheusConf.json  RedisConf.json  RegistryConf.json  UnifiedConf.json  schema_generator.py
tests/: __init__.py  test_client.py  test_factory.py  test_pipeline.py  test_prometheus.py  test_tools.py  test_trainer.py  test_watcher.py  tools.py
tests/monitoring/: test_metrics.py
tests/monitoring/resources/: test_config.yaml
tests/resources/: config.yaml  default_numalogic.yaml
tests/resources/configs/: config.yaml  numalogic_config.yaml
tests/resources/data/: argocd.csv  argorollouts.csv  stream.json  stream_nan.json
tests/udf/: test_filter.py  test_inference.py  test_postprocess.py  test_preprocess.py  test_threshold.py  test_window.py
(+4 files in other folders)
