[tool.poetry]
name = "numalogic-prometheus"
version = "0.4.4"
description = "ML inference on numaflow using numalogic on Prometheus metrics"
authors = ["Numalogic developers"]
packages = [{ include = "numaprom" }]
maintainers = [
    "Avik Basu <avikbasu93@gmail.com>",
    "Nandita Koppisetty <nandita.iitkgp@gmail.com>",
]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10"
]
repository = "https://github.com/numaproj/numalogic-prometheus"

[tool.poetry.dependencies]
python = "~3.10"
redis = {extras = ["hiredis"], version = "^4.5" }
pynumaflow = "~0.4.1"
numalogic = {version = "~0.4", extras = ["redis"]}
orjson = "^3.8.4"
omegaconf = "^2.3.0"
watchdog = "^3.0.0"
loguru = "^0.7.0"

[tool.poetry.group.mlflowserver]
optional = true

[tool.poetry.group.mlflowserver.dependencies]
mlflow = "^2.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^6.3"
black = "^23.1"
fakeredis = "^2.11"
flake8 = "^5.0"
pytest = "^7.1"
pytest-cov = "^4.0"
freezegun = "^1.2.2"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hgdsadsadassmmm
  | \.tox
  | \.venv
  | \.idea
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
